// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`is a number '   56\\r\\n  ' 1`] = `
{
  "isFinite": true,
  "isFloat": false,
  "isInfinity": false,
  "isInt": false,
  "isNegative": false,
  "isNum": false,
  "isNumFinite": false,
  "isPositive": false,
  "isUnSafeNumLike": true,
}
`;

exports[`is a number '-0.1' 1`] = `
{
  "isFinite": true,
  "isFloat": false,
  "isInfinity": false,
  "isInt": false,
  "isNegative": false,
  "isNum": false,
  "isNumFinite": false,
  "isPositive": false,
  "isUnSafeNumLike": true,
}
`;

exports[`is a number '-1.1' 1`] = `
{
  "isFinite": true,
  "isFloat": false,
  "isInfinity": false,
  "isInt": false,
  "isNegative": false,
  "isNum": false,
  "isNumFinite": false,
  "isPositive": false,
  "isUnSafeNumLike": true,
}
`;

exports[`is a number '0' 1`] = `
{
  "isFinite": true,
  "isFloat": false,
  "isInfinity": false,
  "isInt": false,
  "isNegative": false,
  "isNum": false,
  "isNumFinite": false,
  "isPositive": false,
  "isUnSafeNumLike": true,
}
`;

exports[`is a number '0.0' 1`] = `
{
  "isFinite": true,
  "isFloat": false,
  "isInfinity": false,
  "isInt": false,
  "isNegative": false,
  "isNum": false,
  "isNumFinite": false,
  "isPositive": false,
  "isUnSafeNumLike": true,
}
`;

exports[`is a number '0.0E5' 1`] = `
{
  "isFinite": true,
  "isFloat": false,
  "isInfinity": false,
  "isInt": false,
  "isNegative": false,
  "isNum": false,
  "isNumFinite": false,
  "isPositive": false,
  "isUnSafeNumLike": true,
}
`;

exports[`is a number '0.0e-5' 1`] = `
{
  "isFinite": true,
  "isFloat": false,
  "isInfinity": false,
  "isInt": false,
  "isNegative": false,
  "isNum": false,
  "isNumFinite": false,
  "isPositive": false,
  "isUnSafeNumLike": true,
}
`;

exports[`is a number '0.1' 1`] = `
{
  "isFinite": true,
  "isFloat": false,
  "isInfinity": false,
  "isInt": false,
  "isNegative": false,
  "isNum": false,
  "isNumFinite": false,
  "isPositive": false,
  "isUnSafeNumLike": true,
}
`;

exports[`is a number '000' 1`] = `
{
  "isFinite": true,
  "isFloat": false,
  "isInfinity": false,
  "isInt": false,
  "isNegative": false,
  "isNum": false,
  "isNumFinite": false,
  "isPositive": false,
  "isUnSafeNumLike": true,
}
`;

exports[`is a number '012' 1`] = `
{
  "isFinite": true,
  "isFloat": false,
  "isInfinity": false,
  "isInt": false,
  "isNegative": false,
  "isNum": false,
  "isNumFinite": false,
  "isPositive": false,
  "isUnSafeNumLike": true,
}
`;

exports[`is a number '0e+5' 1`] = `
{
  "isFinite": true,
  "isFloat": false,
  "isInfinity": false,
  "isInt": false,
  "isNegative": false,
  "isNum": false,
  "isNumFinite": false,
  "isPositive": false,
  "isUnSafeNumLike": true,
}
`;

exports[`is a number '0x0' 1`] = `
{
  "isFinite": true,
  "isFloat": false,
  "isInfinity": false,
  "isInt": false,
  "isNegative": false,
  "isNum": false,
  "isNumFinite": false,
  "isPositive": false,
  "isUnSafeNumLike": true,
}
`;

exports[`is a number '0xff' 1`] = `
{
  "isFinite": true,
  "isFloat": false,
  "isInfinity": false,
  "isInt": false,
  "isNegative": false,
  "isNum": false,
  "isNumFinite": false,
  "isPositive": false,
  "isUnSafeNumLike": true,
}
`;

exports[`is a number '1' 1`] = `
{
  "isFinite": true,
  "isFloat": false,
  "isInfinity": false,
  "isInt": false,
  "isNegative": false,
  "isNum": false,
  "isNumFinite": false,
  "isPositive": false,
  "isUnSafeNumLike": true,
}
`;

exports[`is a number '1.1' 1`] = `
{
  "isFinite": true,
  "isFloat": false,
  "isInfinity": false,
  "isInt": false,
  "isNegative": false,
  "isNum": false,
  "isNumFinite": false,
  "isPositive": false,
  "isUnSafeNumLike": true,
}
`;

exports[`is a number '5e3' 1`] = `
{
  "isFinite": true,
  "isFloat": false,
  "isInfinity": false,
  "isInt": false,
  "isNegative": false,
  "isNum": false,
  "isNumFinite": false,
  "isPositive": false,
  "isUnSafeNumLike": true,
}
`;

exports[`is a number '10' 1`] = `
{
  "isFinite": true,
  "isFloat": false,
  "isInfinity": false,
  "isInt": false,
  "isNegative": false,
  "isNum": false,
  "isNumFinite": false,
  "isPositive": false,
  "isUnSafeNumLike": true,
}
`;

exports[`is a number '10.10' 1`] = `
{
  "isFinite": true,
  "isFloat": false,
  "isInfinity": false,
  "isInt": false,
  "isNegative": false,
  "isNum": false,
  "isNumFinite": false,
  "isPositive": false,
  "isUnSafeNumLike": true,
}
`;

exports[`is a number '100' 1`] = `
{
  "isFinite": true,
  "isFloat": false,
  "isInfinity": false,
  "isInt": false,
  "isNegative": false,
  "isNum": false,
  "isNumFinite": false,
  "isPositive": false,
  "isUnSafeNumLike": true,
}
`;

exports[`is a number -0.1 1`] = `
{
  "isFinite": true,
  "isFloat": true,
  "isInfinity": false,
  "isInt": false,
  "isNegative": true,
  "isNum": true,
  "isNumFinite": true,
  "isPositive": false,
  "isUnSafeNumLike": true,
}
`;

exports[`is a number -1.1 1`] = `
{
  "isFinite": true,
  "isFloat": true,
  "isInfinity": false,
  "isInt": false,
  "isNegative": true,
  "isNum": true,
  "isNumFinite": true,
  "isPositive": false,
  "isUnSafeNumLike": true,
}
`;

exports[`is a number -100 1`] = `
{
  "isFinite": true,
  "isFloat": false,
  "isInfinity": false,
  "isInt": true,
  "isNegative": true,
  "isNum": true,
  "isNumFinite": true,
  "isPositive": false,
  "isUnSafeNumLike": true,
}
`;

exports[`is a number 0 1`] = `
{
  "isFinite": true,
  "isFloat": false,
  "isInfinity": false,
  "isInt": true,
  "isNegative": false,
  "isNum": true,
  "isNumFinite": true,
  "isPositive": false,
  "isUnSafeNumLike": true,
}
`;

exports[`is a number 0 2`] = `
{
  "isFinite": true,
  "isFloat": false,
  "isInfinity": false,
  "isInt": true,
  "isNegative": false,
  "isNum": true,
  "isNumFinite": true,
  "isPositive": false,
  "isUnSafeNumLike": true,
}
`;

exports[`is a number 0 3`] = `
{
  "isFinite": true,
  "isFloat": false,
  "isInfinity": false,
  "isInt": true,
  "isNegative": false,
  "isNum": true,
  "isNumFinite": true,
  "isPositive": false,
  "isUnSafeNumLike": true,
}
`;

exports[`is a number 0 4`] = `
{
  "isFinite": true,
  "isFloat": false,
  "isInfinity": false,
  "isInt": true,
  "isNegative": false,
  "isNum": true,
  "isNumFinite": true,
  "isPositive": false,
  "isUnSafeNumLike": true,
}
`;

exports[`is a number 0 5`] = `
{
  "isFinite": true,
  "isFloat": false,
  "isInfinity": false,
  "isInt": true,
  "isNegative": false,
  "isNum": true,
  "isNumFinite": true,
  "isPositive": false,
  "isUnSafeNumLike": true,
}
`;

exports[`is a number 0 6`] = `
{
  "isFinite": true,
  "isFloat": false,
  "isInfinity": false,
  "isInt": true,
  "isNegative": false,
  "isNum": true,
  "isNumFinite": true,
  "isPositive": false,
  "isUnSafeNumLike": true,
}
`;

exports[`is a number 0 7`] = `
{
  "isFinite": true,
  "isFloat": false,
  "isInfinity": false,
  "isInt": true,
  "isNegative": false,
  "isNum": true,
  "isNumFinite": true,
  "isPositive": false,
  "isUnSafeNumLike": true,
}
`;

exports[`is a number 0.1 1`] = `
{
  "isFinite": true,
  "isFloat": true,
  "isInfinity": false,
  "isInt": false,
  "isNegative": false,
  "isNum": true,
  "isNumFinite": true,
  "isPositive": true,
  "isUnSafeNumLike": true,
}
`;

exports[`is a number 0.4342944819032518 1`] = `
{
  "isFinite": true,
  "isFloat": true,
  "isInfinity": false,
  "isInt": false,
  "isNegative": false,
  "isNum": true,
  "isNumFinite": true,
  "isPositive": true,
  "isUnSafeNumLike": true,
}
`;

exports[`is a number 0.4636476090008061 1`] = `
{
  "isFinite": true,
  "isFloat": true,
  "isInfinity": false,
  "isInt": false,
  "isNegative": false,
  "isNum": true,
  "isNumFinite": true,
  "isPositive": true,
  "isUnSafeNumLike": true,
}
`;

exports[`is a number 0.5403023058681398 1`] = `
{
  "isFinite": true,
  "isFloat": true,
  "isInfinity": false,
  "isInt": false,
  "isNegative": false,
  "isNum": true,
  "isNumFinite": true,
  "isPositive": true,
  "isUnSafeNumLike": true,
}
`;

exports[`is a number 0.6928926305075755 1`] = `
{
  "isFinite": true,
  "isFloat": true,
  "isInfinity": false,
  "isInt": false,
  "isNegative": false,
  "isNum": true,
  "isNumFinite": true,
  "isPositive": true,
  "isUnSafeNumLike": true,
}
`;

exports[`is a number 0.6931471805599453 1`] = `
{
  "isFinite": true,
  "isFloat": true,
  "isInfinity": false,
  "isInt": false,
  "isNegative": false,
  "isNum": true,
  "isNumFinite": true,
  "isPositive": true,
  "isUnSafeNumLike": true,
}
`;

exports[`is a number 0.6931471805599453 2`] = `
{
  "isFinite": true,
  "isFloat": true,
  "isInfinity": false,
  "isInt": false,
  "isNegative": false,
  "isNum": true,
  "isNumFinite": true,
  "isPositive": true,
  "isUnSafeNumLike": true,
}
`;

exports[`is a number 0.6931471805599453 3`] = `
{
  "isFinite": true,
  "isFloat": true,
  "isInfinity": false,
  "isInt": false,
  "isNegative": false,
  "isNum": true,
  "isNumFinite": true,
  "isPositive": true,
  "isUnSafeNumLike": true,
}
`;

exports[`is a number 0.7071067811865476 1`] = `
{
  "isFinite": true,
  "isFloat": true,
  "isInfinity": false,
  "isInt": false,
  "isNegative": false,
  "isNum": true,
  "isNumFinite": true,
  "isPositive": true,
  "isUnSafeNumLike": true,
}
`;

exports[`is a number 0.7853981633974483 1`] = `
{
  "isFinite": true,
  "isFloat": true,
  "isInfinity": false,
  "isInt": false,
  "isNegative": false,
  "isNum": true,
  "isNumFinite": true,
  "isPositive": true,
  "isUnSafeNumLike": true,
}
`;

exports[`is a number 0.8414709848078965 1`] = `
{
  "isFinite": true,
  "isFloat": true,
  "isInfinity": false,
  "isInt": false,
  "isNegative": false,
  "isNum": true,
  "isNumFinite": true,
  "isPositive": true,
  "isUnSafeNumLike": true,
}
`;

exports[`is a number 1 1`] = `
{
  "isFinite": true,
  "isFloat": false,
  "isInfinity": false,
  "isInt": true,
  "isNegative": false,
  "isNum": true,
  "isNumFinite": true,
  "isPositive": true,
  "isUnSafeNumLike": true,
}
`;

exports[`is a number 1 2`] = `
{
  "isFinite": true,
  "isFloat": false,
  "isInfinity": false,
  "isInt": true,
  "isNegative": false,
  "isNum": true,
  "isNumFinite": true,
  "isPositive": true,
  "isUnSafeNumLike": true,
}
`;

exports[`is a number 1 3`] = `
{
  "isFinite": true,
  "isFloat": false,
  "isInfinity": false,
  "isInt": true,
  "isNegative": false,
  "isNum": true,
  "isNumFinite": true,
  "isPositive": true,
  "isUnSafeNumLike": true,
}
`;

exports[`is a number 1 4`] = `
{
  "isFinite": true,
  "isFloat": false,
  "isInfinity": false,
  "isInt": true,
  "isNegative": false,
  "isNum": true,
  "isNumFinite": true,
  "isPositive": true,
  "isUnSafeNumLike": true,
}
`;

exports[`is a number 1 5`] = `
{
  "isFinite": true,
  "isFloat": false,
  "isInfinity": false,
  "isInt": true,
  "isNegative": false,
  "isNum": true,
  "isNumFinite": true,
  "isPositive": true,
  "isUnSafeNumLike": true,
}
`;

exports[`is a number 1 6`] = `
{
  "isFinite": true,
  "isFloat": false,
  "isInfinity": false,
  "isInt": true,
  "isNegative": false,
  "isNum": true,
  "isNumFinite": true,
  "isPositive": true,
  "isUnSafeNumLike": true,
}
`;

exports[`is a number 1 7`] = `
{
  "isFinite": true,
  "isFloat": false,
  "isInfinity": false,
  "isInt": true,
  "isNegative": false,
  "isNum": true,
  "isNumFinite": true,
  "isPositive": true,
  "isUnSafeNumLike": true,
}
`;

exports[`is a number 1 8`] = `
{
  "isFinite": true,
  "isFloat": false,
  "isInfinity": false,
  "isInt": true,
  "isNegative": false,
  "isNum": true,
  "isNumFinite": true,
  "isPositive": true,
  "isUnSafeNumLike": true,
}
`;

exports[`is a number 1 9`] = `
{
  "isFinite": true,
  "isFloat": false,
  "isInfinity": false,
  "isInt": true,
  "isNegative": false,
  "isNum": true,
  "isNumFinite": true,
  "isPositive": true,
  "isUnSafeNumLike": true,
}
`;

exports[`is a number 1 10`] = `
{
  "isFinite": true,
  "isFloat": false,
  "isInfinity": false,
  "isInt": true,
  "isNegative": false,
  "isNum": true,
  "isNumFinite": true,
  "isPositive": true,
  "isUnSafeNumLike": true,
}
`;

exports[`is a number 1.1 1`] = `
{
  "isFinite": true,
  "isFloat": true,
  "isInfinity": false,
  "isInt": false,
  "isNegative": false,
  "isNum": true,
  "isNumFinite": true,
  "isPositive": true,
  "isUnSafeNumLike": true,
}
`;

exports[`is a number 1.4142135623730951 1`] = `
{
  "isFinite": true,
  "isFloat": true,
  "isInfinity": false,
  "isInt": false,
  "isNegative": false,
  "isNum": true,
  "isNumFinite": true,
  "isPositive": true,
  "isUnSafeNumLike": true,
}
`;

exports[`is a number 1.4426950408889634 1`] = `
{
  "isFinite": true,
  "isFloat": true,
  "isInfinity": false,
  "isInt": false,
  "isNegative": false,
  "isNum": true,
  "isNumFinite": true,
  "isPositive": true,
  "isUnSafeNumLike": true,
}
`;

exports[`is a number 1.5574077246549023 1`] = `
{
  "isFinite": true,
  "isFloat": true,
  "isInfinity": false,
  "isInt": false,
  "isNegative": false,
  "isNum": true,
  "isNumFinite": true,
  "isPositive": true,
  "isUnSafeNumLike": true,
}
`;

exports[`is a number 1.5707963267948966 1`] = `
{
  "isFinite": true,
  "isFloat": true,
  "isInfinity": false,
  "isInt": false,
  "isNegative": false,
  "isNum": true,
  "isNumFinite": true,
  "isPositive": true,
  "isUnSafeNumLike": true,
}
`;

exports[`is a number 1.7976931348623157e+308 1`] = `
{
  "isFinite": true,
  "isFloat": false,
  "isInfinity": false,
  "isInt": true,
  "isNegative": false,
  "isNum": true,
  "isNumFinite": true,
  "isPositive": true,
  "isUnSafeNumLike": true,
}
`;

exports[`is a number 2 1`] = `
{
  "isFinite": true,
  "isFloat": false,
  "isInfinity": false,
  "isInt": true,
  "isNegative": false,
  "isNum": true,
  "isNumFinite": true,
  "isPositive": true,
  "isUnSafeNumLike": true,
}
`;

exports[`is a number 2.302585092994046 1`] = `
{
  "isFinite": true,
  "isFloat": true,
  "isInfinity": false,
  "isInt": false,
  "isNegative": false,
  "isNum": true,
  "isNumFinite": true,
  "isPositive": true,
  "isUnSafeNumLike": true,
}
`;

exports[`is a number 2.718281828459045 1`] = `
{
  "isFinite": true,
  "isFloat": true,
  "isInfinity": false,
  "isInt": false,
  "isNegative": false,
  "isNum": true,
  "isNumFinite": true,
  "isPositive": true,
  "isUnSafeNumLike": true,
}
`;

exports[`is a number 2.718281828459045 2`] = `
{
  "isFinite": true,
  "isFloat": true,
  "isInfinity": false,
  "isInt": false,
  "isNegative": false,
  "isNum": true,
  "isNumFinite": true,
  "isPositive": true,
  "isUnSafeNumLike": true,
}
`;

exports[`is a number 3.14 1`] = `
{
  "isFinite": true,
  "isFloat": true,
  "isInfinity": false,
  "isInt": false,
  "isNegative": false,
  "isNum": true,
  "isNumFinite": true,
  "isPositive": true,
  "isUnSafeNumLike": true,
}
`;

exports[`is a number 3.14 2`] = `
{
  "isFinite": true,
  "isFloat": true,
  "isInfinity": false,
  "isInt": false,
  "isNegative": false,
  "isNum": true,
  "isNumFinite": true,
  "isPositive": true,
  "isUnSafeNumLike": true,
}
`;

exports[`is a number 3.141592653589793 1`] = `
{
  "isFinite": true,
  "isFloat": true,
  "isInfinity": false,
  "isInt": false,
  "isNegative": false,
  "isNum": true,
  "isNumFinite": true,
  "isPositive": true,
  "isUnSafeNumLike": true,
}
`;

exports[`is a number 5 1`] = `
{
  "isFinite": true,
  "isFloat": false,
  "isInfinity": false,
  "isInt": true,
  "isNegative": false,
  "isNum": true,
  "isNumFinite": true,
  "isPositive": true,
  "isUnSafeNumLike": true,
}
`;

exports[`is a number 5e-324 1`] = `
{
  "isFinite": true,
  "isFloat": true,
  "isInfinity": false,
  "isInt": false,
  "isNegative": false,
  "isNum": true,
  "isNumFinite": true,
  "isPositive": true,
  "isUnSafeNumLike": true,
}
`;

exports[`is a number 10 1`] = `
{
  "isFinite": true,
  "isFloat": false,
  "isInfinity": false,
  "isInt": true,
  "isNegative": false,
  "isNum": true,
  "isNumFinite": true,
  "isPositive": true,
  "isUnSafeNumLike": true,
}
`;

exports[`is a number 10.1 1`] = `
{
  "isFinite": true,
  "isFloat": true,
  "isInfinity": false,
  "isInt": false,
  "isNegative": false,
  "isNum": true,
  "isNumFinite": true,
  "isPositive": true,
  "isUnSafeNumLike": true,
}
`;

exports[`is a number 12 1`] = `
{
  "isFinite": true,
  "isFloat": false,
  "isInfinity": false,
  "isInt": true,
  "isNegative": false,
  "isNum": true,
  "isNumFinite": true,
  "isPositive": true,
  "isUnSafeNumLike": true,
}
`;

exports[`is a number 12 2`] = `
{
  "isFinite": true,
  "isFloat": false,
  "isInfinity": false,
  "isInt": true,
  "isNegative": false,
  "isNum": true,
  "isNumFinite": true,
  "isPositive": true,
  "isUnSafeNumLike": true,
}
`;

exports[`is a number 37 1`] = `
{
  "isFinite": true,
  "isFloat": false,
  "isInfinity": false,
  "isInt": true,
  "isNegative": false,
  "isNum": true,
  "isNumFinite": true,
  "isPositive": true,
  "isUnSafeNumLike": true,
}
`;

exports[`is a number 37 2`] = `
{
  "isFinite": true,
  "isFloat": false,
  "isInfinity": false,
  "isInt": true,
  "isNegative": false,
  "isNum": true,
  "isNumFinite": true,
  "isPositive": true,
  "isUnSafeNumLike": true,
}
`;

exports[`is a number 100 1`] = `
{
  "isFinite": true,
  "isFloat": false,
  "isInfinity": false,
  "isInt": true,
  "isNegative": false,
  "isNum": true,
  "isNumFinite": true,
  "isPositive": true,
  "isUnSafeNumLike": true,
}
`;

exports[`is a number 255 1`] = `
{
  "isFinite": true,
  "isFloat": false,
  "isInfinity": false,
  "isInt": true,
  "isNegative": false,
  "isNum": true,
  "isNumFinite": true,
  "isPositive": true,
  "isUnSafeNumLike": true,
}
`;

exports[`is a number 3125 1`] = `
{
  "isFinite": true,
  "isFloat": false,
  "isInfinity": false,
  "isInt": true,
  "isNegative": false,
  "isNum": true,
  "isNumFinite": true,
  "isPositive": true,
  "isUnSafeNumLike": true,
}
`;

exports[`is a number 5000 1`] = `
{
  "isFinite": true,
  "isFloat": false,
  "isInfinity": false,
  "isInt": true,
  "isNegative": false,
  "isNum": true,
  "isNumFinite": true,
  "isPositive": true,
  "isUnSafeNumLike": true,
}
`;

exports[`is a number 1663616015139 1`] = `
{
  "isFinite": true,
  "isFloat": false,
  "isInfinity": false,
  "isInt": true,
  "isNegative": false,
  "isNum": true,
  "isNumFinite": true,
  "isPositive": true,
  "isUnSafeNumLike": true,
}
`;

exports[`is not a number '   ' 1`] = `
{
  "isFinite": true,
  "isFloat": false,
  "isInfinity": false,
  "isInt": false,
  "isNegative": false,
  "isNum": false,
  "isNumFinite": false,
  "isPositive": false,
  "isUnSafeNumLike": false,
}
`;

exports[`is not a number '' 1`] = `
{
  "isFinite": true,
  "isFloat": false,
  "isInfinity": false,
  "isInt": false,
  "isNegative": false,
  "isNum": false,
  "isNumFinite": false,
  "isPositive": false,
  "isUnSafeNumLike": false,
}
`;

exports[`is not a number '' 2`] = `
{
  "isFinite": true,
  "isFloat": false,
  "isInfinity": false,
  "isInt": false,
  "isNegative": false,
  "isNum": false,
  "isNumFinite": false,
  "isPositive": false,
  "isUnSafeNumLike": false,
}
`;

exports[`is not a number '\\r\\n\\t' 1`] = `
{
  "isFinite": true,
  "isFloat": false,
  "isInfinity": false,
  "isInt": false,
  "isNegative": false,
  "isNum": false,
  "isNumFinite": false,
  "isPositive": false,
  "isUnSafeNumLike": false,
}
`;

exports[`is not a number '3a' 1`] = `
{
  "isFinite": false,
  "isFloat": false,
  "isInfinity": false,
  "isInt": false,
  "isNegative": false,
  "isNum": false,
  "isNumFinite": false,
  "isPositive": false,
  "isUnSafeNumLike": false,
}
`;

exports[`is not a number 'abc' 1`] = `
{
  "isFinite": false,
  "isFloat": false,
  "isInfinity": false,
  "isInt": false,
  "isNegative": false,
  "isNum": false,
  "isNumFinite": false,
  "isPositive": false,
  "isUnSafeNumLike": false,
}
`;

exports[`is not a number 'false' 1`] = `
{
  "isFinite": false,
  "isFloat": false,
  "isInfinity": false,
  "isInt": false,
  "isNegative": false,
  "isNum": false,
  "isNumFinite": false,
  "isPositive": false,
  "isUnSafeNumLike": false,
}
`;

exports[`is not a number 'null' 1`] = `
{
  "isFinite": false,
  "isFloat": false,
  "isInfinity": false,
  "isInt": false,
  "isNegative": false,
  "isNum": false,
  "isNumFinite": false,
  "isPositive": false,
  "isUnSafeNumLike": false,
}
`;

exports[`is not a number 'true' 1`] = `
{
  "isFinite": false,
  "isFloat": false,
  "isInfinity": false,
  "isInt": false,
  "isNegative": false,
  "isNum": false,
  "isNumFinite": false,
  "isPositive": false,
  "isUnSafeNumLike": false,
}
`;

exports[`is not a number 'undefined' 1`] = `
{
  "isFinite": false,
  "isFloat": false,
  "isInfinity": false,
  "isInt": false,
  "isNegative": false,
  "isNum": false,
  "isNumFinite": false,
  "isPositive": false,
  "isUnSafeNumLike": false,
}
`;

exports[`is not a number /foo/ 1`] = `
{
  "isFinite": false,
  "isFloat": false,
  "isInfinity": false,
  "isInt": false,
  "isNegative": false,
  "isNum": false,
  "isNumFinite": false,
  "isPositive": false,
  "isUnSafeNumLike": false,
}
`;

exports[`is not a number [ 1 ] 1`] = `
{
  "isFinite": true,
  "isFloat": false,
  "isInfinity": false,
  "isInt": false,
  "isNegative": false,
  "isNum": false,
  "isNumFinite": false,
  "isPositive": false,
  "isUnSafeNumLike": false,
}
`;

exports[`is not a number [ 1, 2, 3 ] 1`] = `
{
  "isFinite": false,
  "isFloat": false,
  "isInfinity": false,
  "isInt": false,
  "isNegative": false,
  "isNum": false,
  "isNumFinite": false,
  "isPositive": false,
  "isUnSafeNumLike": false,
}
`;

exports[`is not a number [] 1`] = `
{
  "isFinite": true,
  "isFloat": false,
  "isInfinity": false,
  "isInt": false,
  "isNegative": false,
  "isNum": false,
  "isNumFinite": false,
  "isPositive": false,
  "isUnSafeNumLike": false,
}
`;

exports[`is not a number [Function (anonymous)] 1`] = `
{
  "isFinite": false,
  "isFloat": false,
  "isInfinity": false,
  "isInt": false,
  "isNegative": false,
  "isNum": false,
  "isNumFinite": false,
  "isPositive": false,
  "isUnSafeNumLike": false,
}
`;

exports[`is not a number [Function: sin] 1`] = `
{
  "isFinite": false,
  "isFloat": false,
  "isInfinity": false,
  "isInt": false,
  "isNegative": false,
  "isNum": false,
  "isNumFinite": false,
  "isPositive": false,
  "isUnSafeNumLike": false,
}
`;

exports[`is not a number {} 1`] = `
{
  "isFinite": false,
  "isFloat": false,
  "isInfinity": false,
  "isInt": false,
  "isNegative": false,
  "isNum": false,
  "isNumFinite": false,
  "isPositive": false,
  "isUnSafeNumLike": false,
}
`;

exports[`is not a number -Infinity 1`] = `
{
  "isFinite": false,
  "isFloat": false,
  "isInfinity": true,
  "isInt": true,
  "isNegative": true,
  "isNum": true,
  "isNumFinite": false,
  "isPositive": false,
  "isUnSafeNumLike": false,
}
`;

exports[`is not a number 2022-09-19T19:33:35.139Z 1`] = `
{
  "isFinite": true,
  "isFloat": false,
  "isInfinity": false,
  "isInt": false,
  "isNegative": false,
  "isNum": false,
  "isNumFinite": false,
  "isPositive": false,
  "isUnSafeNumLike": false,
}
`;

exports[`is not a number Infinity 1`] = `
{
  "isFinite": false,
  "isFloat": false,
  "isInfinity": true,
  "isInt": true,
  "isNegative": false,
  "isNum": true,
  "isNumFinite": false,
  "isPositive": true,
  "isUnSafeNumLike": false,
}
`;

exports[`is not a number Infinity 2`] = `
{
  "isFinite": false,
  "isFloat": false,
  "isInfinity": true,
  "isInt": true,
  "isNegative": false,
  "isNum": true,
  "isNumFinite": false,
  "isPositive": true,
  "isUnSafeNumLike": false,
}
`;

exports[`is not a number NaN 1`] = `
{
  "isFinite": false,
  "isFloat": false,
  "isInfinity": false,
  "isInt": false,
  "isNegative": false,
  "isNum": false,
  "isNumFinite": false,
  "isPositive": false,
  "isUnSafeNumLike": false,
}
`;

exports[`is not a number NaN 2`] = `
{
  "isFinite": false,
  "isFloat": false,
  "isInfinity": false,
  "isInt": false,
  "isNegative": false,
  "isNum": false,
  "isNumFinite": false,
  "isPositive": false,
  "isUnSafeNumLike": false,
}
`;

exports[`is not a number NaN 3`] = `
{
  "isFinite": false,
  "isFloat": false,
  "isInfinity": false,
  "isInt": false,
  "isNegative": false,
  "isNum": false,
  "isNumFinite": false,
  "isPositive": false,
  "isUnSafeNumLike": false,
}
`;

exports[`is not a number NaN 4`] = `
{
  "isFinite": false,
  "isFloat": false,
  "isInfinity": false,
  "isInt": false,
  "isNegative": false,
  "isNum": false,
  "isNumFinite": false,
  "isPositive": false,
  "isUnSafeNumLike": false,
}
`;

exports[`is not a number NaN 5`] = `
{
  "isFinite": false,
  "isFloat": false,
  "isInfinity": false,
  "isInt": false,
  "isNegative": false,
  "isNum": false,
  "isNumFinite": false,
  "isPositive": false,
  "isUnSafeNumLike": false,
}
`;

exports[`is not a number NaN 6`] = `
{
  "isFinite": false,
  "isFloat": false,
  "isInfinity": false,
  "isInt": false,
  "isNegative": false,
  "isNum": false,
  "isNumFinite": false,
  "isPositive": false,
  "isUnSafeNumLike": false,
}
`;

exports[`is not a number NaN 7`] = `
{
  "isFinite": false,
  "isFloat": false,
  "isInfinity": false,
  "isInt": false,
  "isNegative": false,
  "isNum": false,
  "isNumFinite": false,
  "isPositive": false,
  "isUnSafeNumLike": false,
}
`;

exports[`is not a number NaN 8`] = `
{
  "isFinite": false,
  "isFloat": false,
  "isInfinity": false,
  "isInt": false,
  "isNegative": false,
  "isNum": false,
  "isNumFinite": false,
  "isPositive": false,
  "isUnSafeNumLike": false,
}
`;

exports[`is not a number NaN 9`] = `
{
  "isFinite": false,
  "isFloat": false,
  "isInfinity": false,
  "isInt": false,
  "isNegative": false,
  "isNum": false,
  "isNumFinite": false,
  "isPositive": false,
  "isUnSafeNumLike": false,
}
`;

exports[`is not a number NaN 10`] = `
{
  "isFinite": false,
  "isFloat": false,
  "isInfinity": false,
  "isInt": false,
  "isNegative": false,
  "isNum": false,
  "isNumFinite": false,
  "isPositive": false,
  "isUnSafeNumLike": false,
}
`;

exports[`is not a number false 1`] = `
{
  "isFinite": true,
  "isFloat": false,
  "isInfinity": false,
  "isInt": false,
  "isNegative": false,
  "isNum": false,
  "isNumFinite": false,
  "isPositive": false,
  "isUnSafeNumLike": false,
}
`;

exports[`is not a number null 1`] = `
{
  "isFinite": true,
  "isFloat": false,
  "isInfinity": false,
  "isInt": false,
  "isNegative": false,
  "isNum": false,
  "isNumFinite": false,
  "isPositive": false,
  "isUnSafeNumLike": false,
}
`;

exports[`is not a number true 1`] = `
{
  "isFinite": true,
  "isFloat": false,
  "isInfinity": false,
  "isInt": false,
  "isNegative": false,
  "isNum": false,
  "isNumFinite": false,
  "isPositive": false,
  "isUnSafeNumLike": false,
}
`;

exports[`is not a number undefined 1`] = `
{
  "isFinite": false,
  "isFloat": false,
  "isInfinity": false,
  "isInt": false,
  "isNegative": false,
  "isNum": false,
  "isNumFinite": false,
  "isPositive": false,
  "isUnSafeNumLike": false,
}
`;
